<resources>
    <string name="app_name">SMS Sender</string>
    <string name="db_name">db_contacts</string>

    <string name="sms_tab_text">Sender</string>
    <string name="events_tab_text">Events</string>

    <string name="title_activity_settings">Settings</string>

    <string name="message_text_view">Message:</string>
    <string name="phone_text_view">Phone #s:</string>
    <string name="phone_text_view_hint">phones separated by commas ;</string>
    <string name="message_text_view_hint">type your message here…</string>
    <string name="or_separator_text">Or</string>

    <string name="choose_file_exporter_title">"Choose Excel File"</string>

    <string name="btn_import_text">Import</string>
    <string name="btn_save_text">Save</string>
    <string name="btn_send_text">Send</string>
    <string name="btn_settings_text">Settings</string>
    <string name="version_text">Version:</string>
    <string name="message_delay_text">Message Delay:</string>
    <string name="reset_text">Reset</string>
    <string name="open_sources_text">Open Sources:</string>

    <string name="name_text">Name</string>
    <string name="date_text">Date</string>
    <string name="status_text">Status</string>

    <string name="phone_parse_success_message_text">Phones were successfully saved.</string>

    <string name="phone_parse_error_message_text">Error occurred while were parsed.</string>

    <string name="grant_sms_permission_text">Please grant SMS permissions!</string>

    <string name="open_sources_desc_text">
        * Room - DB Storage\n
        * Apache POI lib - XLS,XLSX Reader\n
        * Dagger2 - Dependency Injection\n
        * MVVM - Model View View Model arch\n
        * ButterKnife - View Dependency Injection
    </string>
</resources>
