<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.sms.SmsFragment">
        <TextView
            android:id="@+id/ContactsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/phone_text_view"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="72dp" />

        <EditText
            android:id="@+id/contactsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:gravity="top"
            android:hint="@string/message_text_view_hint"
            android:inputType="textMultiLine|textPhonetic"
            android:maxLines="10"
            android:minLines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ContactsTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ContactsTextView" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_save_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactsEditText" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/saveButton">

            <View
                android:layout_width="0dp"
                android:layout_height="0.2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#C7C7C7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or_separator_text"
                android:textColor="#555555"
                android:textStyle="italic" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#C7C7C7" />
        </LinearLayout>

        <Button
            android:id="@+id/importButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_import_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/MessageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/message_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/messageTextInput" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="2048"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/importButton" >
            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:gravity="top"
                android:hint="@string/message_text_view_hint"
                android:inputType="textMultiLine|text"
                android:maxLines="10"
                android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_send_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageTextInput" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_settings_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>